# Agente_wind

./: README.md  config.py  main.py  pyproject.toml
agents/: __init__.py  pm_agent.py  tech_writer.py
bot/: __init__.py  telegram_bot.py
data/: memory.db
output/prd/: PRD_notificacoes_push_20251218_155947.md
team/: __init__.py  product_team.py
tools/: __init__.py  audio.py
